--- a/ph_styles.css
+++ b/ph_styles.css
@@ -73,14 +73,14 @@ nav a {
 }
 
 nav ul a:link, nav ul a:visited {
+  background-color: hsla(0, 0%, 42%, 0.7);
+  color: hsla(0, 0%, 100%, 0.7);
   text-decoration: none;
-  background-color: hsla(0, 0%, 100%, 0.7);
-  color: white;
 }
 
 nav ul a:hover, nav ul a:active {
-  background-color: hsla(0, 0%, 42%, 0.7);
-  color: hsla(0, 0%, 100%, 0.7);
+  background-color: hsla(0, 0%, 100%, 0.7);
+  color: white;
 }
 
 /* Section Styles */
@@ -126,3 +126,15 @@ section#play4 h1 {
   font-family: dobkin, cursive;
 }
 /* Description List Styles */
+
+dt {
+  font-size: 1.3em;
+  font-weight: bold;
+  color: hsla(0, 0%, 0%, 0.4);
+}
+
+dd {
+  font-size: 1.3em;
+  margin-left: 0px;
+  margin-bottom: 10px;
+}
